# rivulet

./: CHANGELOG.md  Cargo.toml  README.md  crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: ci.yml  doc.yml
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/error/: trait.Error.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
rivulet/: Cargo.toml  all.html  enum.Error.html  index.html  sidebar-items.js  struct.Commit.html  struct.Consume.html  struct.Grant.html  struct.MapError.html  struct.Release.html  struct.Request.html  struct.Reserve.html  trait.Sink.html  trait.Source.html  trait.SourceMut.html  trait.StableView.html  trait.Stream.html  trait.StreamMut.html  trait.View.html  trait.ViewMut.html
rivulet-buffer/: Cargo.toml
rivulet-buffer/src/: circular_buffer.rs  common.rs  error.rs  lib.rs  spmc.rs  spsc.rs  unsafe_circular_buffer.rs
rivulet-buffer/src/vm/: mod.rs  windows.rs
rivulet-buffer/src/vm/unix/: mod.rs
rivulet-buffer/tests/: buffer.rs
rivulet-core/: Cargo.toml
rivulet-core/src/: lib.rs  stream.rs  stream_ext.rs  transform.rs
rivulet/base/: enum.Error.html  struct.Commit.html  struct.Consume.html  struct.Grant.html  struct.MapError.html  struct.Release.html  struct.Request.html  struct.Reserve.html  trait.Sink.html  trait.Source.html  trait.SourceMut.html  trait.StableView.html  trait.Stream.html  trait.StreamMut.html  trait.View.html  trait.ViewMut.html
rivulet/buffer/: index.html  sidebar-items.js
rivulet/buffer/circular_buffer/: index.html  sidebar-items.js
rivulet/buffer/circular_buffer/spmc/: fn.buffer.html  index.html  sidebar-items.js  struct.BufferSink.html  struct.BufferSource.html  struct.Sink.html  struct.Source.html
rivulet/buffer/circular_buffer/spsc/: fn.buffer.html  index.html  sidebar-items.js  struct.BufferSink.html  struct.BufferSource.html  struct.Sink.html  struct.Source.html
rivulet/circular_buffer/: fn.circular_buffer.html  index.html  sidebar-items.js  struct.Sink.html  struct.Source.html
rivulet/circular_buffer/spmc/: fn.buffer.html  index.html  sidebar-items.js  struct.Sink.html  struct.Source.html
rivulet/circular_buffer/spsc/: fn.buffer.html  index.html  sidebar-items.js  struct.Sink.html  struct.Source.html
rivulet/error/: enum.Infallible.html  index.html  sidebar-items.js  struct.GrantOverflow.html
rivulet/io/: enum.Error.html  index.html  sidebar-items.js  struct.AsyncReader.html  struct.AsyncWriter.html  struct.ReadToSink.html  struct.Reader.html  struct.WriteFromSource.html  struct.Writer.html
rivulet/lazy/: fn.lazy_channel.html  index.html  sidebar-items.js  struct.Lazy.html  struct.LazyChannelSink.html  struct.LazyChannelSource.html
rivulet/lazy/channel/: fn.lazy_channel.html  struct.LazyChannelSink.html  struct.LazyChannelSource.html
rivulet/slice/: index.html  sidebar-items.js  struct.Slice.html  struct.SliceMut.html
rivulet/splittable/: index.html  sidebar-items.js  struct.Cloneable.html  struct.First.html  struct.Second.html  struct.Source.html  struct.Split.html  struct.View.html  trait.Splittable.html  trait.SplittableImpl.html  trait.SplittableImplMut.html  trait.SplittableMut.html  trait.SplittableSource.html  trait.SplittableSourceMut.html  trait.SplittableView.html  trait.SplittableViewImpl.html  trait.SplittableViewImplMut.html  trait.SplittableViewMut.html
rivulet/splittable/cloneable/: struct.Cloneable.html
rivulet/splittable/implementation/: index.html  sidebar-items.js  trait.IntoSplittableSource.html  trait.SplittableSource.html  trait.SplittableSourceMut.html
rivulet/splittable/sequence/: struct.First.html  struct.Second.html
rivulet/splittable/source/: struct.Source.html
rivulet/splittable/split/: struct.Split.html
rivulet/splittable/view/: struct.View.html
rivulet/src/: lib.rs
rivulet/tests/: buffer.rs
rivulet/view/: index.html  sidebar-items.js  struct.Grant.html  struct.MapError.html  trait.Sink.html  trait.Source.html  trait.View.html  trait.ViewMut.html
src/: base.rs  circular_buffer.rs  error.rs  io.rs  lazy.rs  lib.rs  slice.rs  splittable.rs  stream.rs  view.rs
src/buffer/: circular_buffer.rs  mod.rs  spmc.rs  spsc.rs  unsafe_circular_buffer.rs
src/rivulet/: base.rs.html  circular_buffer.rs.html  error.rs.html  io.rs.html  lazy.rs.html  lib.rs.html  slice.rs.html  splittable.rs.html  view.rs.html
src/splittable/: cloneable.rs  cloneable_source.rs  implementation.rs  sequence.rs  source.rs  split.rs  view.rs
tests/: buffer.rs  circular_buffer.rs  io.rs  lazy.rs  object_safe.rs  sequence.rs  slice.rs  spsc_buffer.rs
(+28 files in other folders)
