[package]
name = "rivulet"
version = "0.1.0"
authors = ["Caleb Zulawski <caleb.zulawski@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Asynchronous contiguous-memory streams"
repository = "https://github.com/calebzulawski/rivulet"
categories = ["asynchronous", "memory-management"]
readme = "README.md"
edition = "2018"

[features]
default = ["std", "io", "buffer"]
std = []
io = []
buffer = ["num-integer", "vmap"]

[dependencies]
pin-project = "1"
futures = { version = "0.3", default-features = false, features = ["executor"] }
num-integer = { version = "0.1", default-features = false, optional = true }
vmap = { version = "0.4.3", optional = true }

[dev-dependencies]
seahash = "3"
rand = { version = "0.7", features = ["small_rng"] }
tokio = { version = "0.2", default-features = false, features = ["sync", "rt-threaded", "macros"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
