[package]
name = "rivulet"
version = "0.1.0"
authors = ["Caleb Zulawski <caleb.zulawski@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Asynchronous contiguous-memory streams"
repository = "https://github.com/calebzulawski/rivulet"
categories = ["asynchronous", "memory-management"]
readme = "README.md"
edition = "2018"

[features]
default = ["std"]
std = ["num-integer", "vmap"]

[dependencies]
pin-project = "1"
futures = { version = "0.3", default-features = false, features = ["executor"] }
num-integer = { version = "0.1", default-features = false, optional = true }
vmap = { version = "0.5", optional = true }
once_cell = "1"

[dev-dependencies]
seahash = "4"
rand = { version = "0.8", features = ["small_rng"] }
tokio = { version = "1", default-features = false, features = ["sync", "rt-multi-thread", "macros"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
