[package]
name = "rivulet-buffer"
version = "0.1.0"
authors = ["Caleb Zulawski <caleb.zulawski@gmail.com>"]
edition = "2018"

[dependencies]
rivulet-core = { version = "0.1", path = "../rivulet-core" }
slice-deque = "0.3"
futures = "0.3"
pin-project = "0.4"

[dev-dependencies]
seahash = "3"
rand = { version = "0.7", features = ["small_rng"] }
tokio = { version = "0.2", default-features = false, features = ["sync", "rt-threaded"] }
