[package]
name = "rivulet-buffer"
version = "0.1.0"
authors = ["Caleb Zulawski <caleb.zulawski@gmail.com>"]
edition = "2018"

[dependencies]
rivulet-core = { version = "0.1", path = "../rivulet-core" }
futures = "0.3"
pin-project = "0.4"
num-integer = "0.1"
once_cell = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = "0.19"

[target.'cfg(windows)'.dependencies]
# Must use the std feature, otherwise c_void has incorrect repr and pointer arithmetic doesn't work
# https://github.com/retep998/winapi-rs/issues/950
winapi = { version = "0.3", features = ["std", "winbase", "winnt", "handleapi", "sysinfoapi", "errhandlingapi", "memoryapi"] }

[dev-dependencies]
seahash = "3"
rand = { version = "0.7", features = ["small_rng"] }
tokio = { version = "0.2", default-features = false, features = ["sync", "rt-threaded", "macros"] }
